<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:id="@+id/imageButton"
        android:clickable="true"
        android:cropToPadding="true"
        android:contentDescription="@string/Pic1Description"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/eiffel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pic1Description"
        android:id="@+id/ImageButtonText1"
        android:layout_below="@+id/imageButton"
        android:layout_marginTop="5dp"
        android:layout_alignParentEnd="false"
        android:layout_alignLeft="@+id/imageButton"
        android:layout_alignRight="@+id/imageButton"
        android:gravity="center" />

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:id="@+id/imageButton2"
        android:background="@drawable/great"
        android:contentDescription="@string/Pic4Description"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pic4Description"
        android:id="@+id/ImageButtonText2"
        android:layout_below="@+id/imageButton2"
        android:layout_alignLeft="@+id/imageButton2"
        android:layout_marginTop="5dp"
        android:layout_alignRight="@+id/imageButton2"
        android:gravity="center" />

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:id="@+id/imageButton3"
        android:background="@drawable/kremlin"
        android:contentDescription="@string/Pic2Description"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pic2Description"
        android:id="@+id/ImageButtonText3"
        android:layout_above="@+id/imageButton3"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:layout_alignLeft="@+id/imageButton3"
        android:layout_alignRight="@+id/imageButton3" />

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:id="@+id/imageButton4"
        android:background="@drawable/liberty"
        android:contentDescription="@string/Pic3Description"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pic3Description"
        android:id="@+id/ImageButtonText4"
        android:layout_above="@+id/imageButton4"
        android:gravity="center"
        android:layout_alignRight="@+id/imageButton4"
        android:layout_alignLeft="@+id/imageButton4"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:id="@+id/Welcome"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="25dp"
        android:textStyle="bold|italic"
        android:textColor="@color/abc_primary_text_material_light" />

</RelativeLayout>
